--- a/Insultor.JS/www/index.html
+++ b/Insultor.JS/www/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
   <script src="/bundle.js" ></script>
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <div id="mount"></div>
