Fix index.html links to bundles

--- a/www/index.html
+++ b/www/index.html
@@ -1,48 +1,1 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <title>Insult my Face</title>
-        <meta name="description" content="Delivers insults to your face, based on your face.">
-        <meta name="HandheldFriendly" content="True">
-        <meta name="MobileOptimized" content="320">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="cleartype" content="on">
-        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-
-        <link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
-
-        <!-- SEO: If mobile URL is different from desktop URL, add a canonical link to the desktop page -->
-        <!--
-        <link rel="canonical" href="http://www.example.com/" >
-        -->
-
-        <!-- Add to homescreen for Chrome on Android -->
-        <meta name="mobile-web-app-capable" content="yes">
-
-        <!-- For iOS web apps. Delete if not needed. https://github.com/h5bp/mobile-boilerplate/issues/94 -->
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="Insult my Face">
-
-        <!-- <link rel="stylesheet" href="css/main.css"> -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha256-QUyqZrt5vIjBumoqQV0jM8CgGqscFfdGhN+nVCqX0vc=" crossorigin="anonymous" />
-    </head>
-    <body>
-      <div id="mount"></div>
-
-        <!-- Add your site or application content here -->
-        <script src="/bundle.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/2.0.19/bootstrap-native-v4.js" integrity="sha256-/+ZAVWS0xgKfP9AinC1cPpNkxVxdoIccyFaN9F2WAZM=" crossorigin="anonymous"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!-- <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script> -->
-    </body>
-</html>
+<!doctype html><html class="no-js" lang=""><head><meta charset="utf-8"><title>Insult my Face</title><meta name="description" content="Delivers insults to your face, based on your face."><meta name="HandheldFriendly" content="True"><meta name="MobileOptimized" content="320"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="cleartype" content="on"><link rel="dns-prefetch" href="https://cdnjs.cloudflare.com"><link rel="shortcut icon" href="img/touch/apple-touch-icon.png"><meta name="mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black"><meta name="apple-mobile-web-app-title" content="Insult my Face"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha256-QUyqZrt5vIjBumoqQV0jM8CgGqscFfdGhN+nVCqX0vc=" crossorigin="anonymous"></head><body><div id="mount"></div><script src="main.js"></script><script src="vendor.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/2.0.19/bootstrap-native-v4.js" integrity="sha256-/+ZAVWS0xgKfP9AinC1cPpNkxVxdoIccyFaN9F2WAZM=" crossorigin="anonymous"></script><script type="text/javascript" src="vendor.03824bf58e7d1924e091.js"></script><script type="text/javascript" src="main.b72d3e87a8060dbd223c.js"></script></body></html>
